# spaceshot

./: .clang-format  .gitignore  LICENSE  README.md  meson.build  meson.options  spaceshot.1
config/: .gitignore  config.c  config.h  config.py  defaults.ini  generator.py  meson.build  parse.c  parse.h  parser-test.c  test.ini
notify/: file-manager.vala  land.mabi.spaceshot.service.in  main.vala  meson.build  notification.vala  server.vala  spaceshot-notify.1
src/: anchor.h  args.c  args.h  bbox.c  bbox.h  config.c  config.h  debug.c  debug.h  image.c  image.h  link-buffer.c  link-buffer.h  log.c  log.h  main.c  meson.build  notifications.c  notifications.h  output-picker.c  output-picker.h  paths.c  paths.h  picker-common.h  region-picker.c  region-picker.h  smart-border.c  smart-border.h  stb_ds.h  toplevel-picker.c  toplevel-picker.h
src/picker/: region-picker.c  region-picker.h
src/wayland/: clipboard-common.c  clipboard-core.c  clipboard-ext.c  clipboard.c  clipboard.h  globals.c  globals.h  label-surface.c  label-surface.h  output.h  overlay-surface.c  overlay-surface.h  render.c  render.h  screen-capture-common.c  screen-capture-ext.c  screen-capture-wlr.c  screen-capture.h  screenshot.c  screenshot.h  seat.c  seat.h  shared-memory.c  shared-memory.h  surface.c  toplevel.h
