option('timing', type: 'boolean', value: false, description: 'Record timing information')
option('debug-clipping', type: 'boolean', value: false, description: 'Draw clip regions on screen instead of applying them')
option('notifications', type: 'boolean', value: true, description: 'Send notifications after screenshotting')
